fix image collapsing + new project layout

--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,6 @@ body {
 
 	width: 100%;
 	height: 3em;
-
 }
 
 #nav-bar div {
@@ -40,24 +39,6 @@ body {
 
 	line-height: 2em;
 	float: left;
-}
-
-#header ul {
-	float: right;
-
-	margin: 0px;
-	padding: 0px;
-}
-
-#header li {
-	float:left;
-	display: block;
-	
-	text-align: center;
-	line-height: 3em;
-	
-	width: 6em;
-	height: 3em;
 }
 
 .stripe {
@@ -116,11 +97,13 @@ footer a {
 	height: 48em;
 	max-width: 64em;
 
-	margin: 0px auto 6em auto;
+	margin: 0px auto 7em auto;
 
 	background-color: #fff5d1;
 	border-radius: 10px;
 }
+
+/* Rows */
 
 .row {
 	position: relative;
@@ -151,14 +134,21 @@ footer a {
 	padding: 0;
 }
 
+/* Project Grid */
+
 #project-grid {
 	padding: 1em;
 	z-index: 5;
 }
 
 .project-cell {
-	padding: 0 auto 0 auto;
+	position: relative;
+
+	height: 20em;
+
 	max-width: 20em;
+	max-height: 20em;
+	overflow: hidden;
 
 	margin-left: auto;
 	margin-right: auto;
@@ -166,40 +156,39 @@ footer a {
 	border-color: #585858
 }
 
-.project-cell .title {
-	clear: both;
-	display: block;
-	position: relative;
-	padding: 10px 0px 10px 0px;
+.project-cell .info-section {
+	position: absolute;
+	width: 100%;
 
 	text-align: center;
-	font-size: 18px;
+	font-size: 12px;
+	color: #585858
+
+	min-height: 17px;
+
+	bottom: 10px;
+	border-bottom-color: #585858;
+}
+
+.project-cell .title {
+	position: relative;
+	padding: 2px 0px 2px 0px;
+
+	font-size: 20px;
 	min-height: 24px;
 
 	border-bottom: 1px solid;
 }
 
 .project-cell .description {
-	display: block;
 	position: relative;
-	padding: 4px 0px 4px 0px;
-
-	text-align: center;
-	font-size: 12px;
-	min-height: 17px;
-
+	padding: 2px 0 2px 0;
 	border-bottom: 1px solid;
 }
 
 .project-cell .platform {
-	display: block;
 	position: relative;
-	padding: 4px 0px 4px 0px;
-
-	text-align: center;
-	font-size: 12px;
-	min-height: 17px;
-
+	padding: 2px 0 2px 0;
 	border-bottom: 1px solid;
 }
 
@@ -208,17 +197,25 @@ footer a {
 	position: relative;
 	overflow: hidden;
 
-	width: auto;
-	height: auto;
+	width: 100%;
+	height: 100%;
+
 	max-width: 20em;
 	max-height: 20em;
 
 	float: left;
+	background-color: white;
 }
 
 .img-container img {
+	position: absolute;
+
+	left: 0;
+	top: 0;
+
 	width: 100%;
 	height: auto;
+	opacity: 0.8;
 }
 
 /* icons */
